--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,100 @@
-.App {
-  text-align: center;
+html  {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+  height: 100%;
+  width: 100%;
+  background-color: #323232;
+  color: #fff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+* {
+  box-sizing: content-box;
+}
+
+nav.navbar {
+  position: relative;
+  width: 100%;
+  height: 60px;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #222;
+}
+
+.navbar .separator {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.navbar .section {
+  margin-right: 20px;
+}
+
+.navbar .title {
+  margin: 0;
+  font-size: 18px;
+  padding-left: 20px;
+}
+
+.navbar .slider {
+  width: 240px;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto 90px;
+}
+
+.viewer {
+  position: relative;
+  background-color: #000;
+  width: 1000px;
+  height: 562.5px;
+  margin: 40px auto 30px;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.viewer-content {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.viewer-img {
+  position: relative;
+  width: 1000px;
+  height: 562.5px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.viewer-img img {
+  max-height: 88%;
+  border: 7px solid #fff; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ms-Icon {
+  cursor: pointer;
 }
+
+.dropzone {
+  margin: 40px 0px;
+  border: #555 dashed 2px;
+  color: #555;
+  text-align: center;
+  padding: 120px 80px;
+  cursor: pointer;
+}
+
+.dropzone:hover {
+  border-color: #888;
+  color: #888;
+}
+
+
